cmd/picky/tests/ptr.p.out
stack trace at:
main() pid 0	pc 0x0000000e ptr.p:15
	local variables:
	p = 0xc208040100
	q = 0xc208040140

global variables:
Maxint = 2147483647
Minint = -2147483646
Maxchar = 'ÿ'
Minchar = '\000'
Minstrength = %!v(PANIC=runtime error: index out of range)
Maxstrength = %!v(PANIC=runtime error: index out of range)
Transp = 0.0
Tlucid = 0.5
Opaque = 1.0
NoBut = %!v(PANIC=vfmt: fmt 75)
Eol = \n
Down = 'ô'
Shift = 'ñ'
MetaLeft = '÷'
MetaRight = 'ø'
Esc = '\033'
Up = 'õ'
Left = 'ó'
Ctrl = 'ð'
Del = 'ù'
Eof = 'ÿ'
Right = 'ò'
Return = 'ö'
Tab = \t
Nul = '\000'
stdin = <stdin>
stdout = <stdout>
stdgraph = invalid file
heap:
0xc208040140 = 724249387
0xc208040100 = 724249387
stack trace at:
main() pid 0	pc 0x00000030 ptr.p:20
	local variables:
	p = 0xc208040100
	q = 0xc208040100

global variables:
Maxint = 2147483647
Minint = -2147483646
Maxchar = 'ÿ'
Minchar = '\000'
Minstrength = %!v(PANIC=runtime error: index out of range)
Maxstrength = %!v(PANIC=runtime error: index out of range)
Transp = 0.0
Tlucid = 0.5
Opaque = 1.0
NoBut = %!v(PANIC=vfmt: fmt 75)
Eol = \n
Down = 'ô'
Shift = 'ñ'
MetaLeft = '÷'
MetaRight = 'ø'
Esc = '\033'
Up = 'õ'
Left = 'ó'
Ctrl = 'ð'
Del = 'ù'
Eof = 'ÿ'
Right = 'ò'
Return = 'ö'
Tab = \t
Nul = '\000'
stdin = <stdin>
stdout = <stdout>
stdgraph = invalid file
heap:
0xc208040140 = 724249387
0xc208040100 = 3
memory leaks:
ptr.p:13	(1 times)
ptr.p:14	(1 times)
3
